test-results/error_arity.err
[31m./examples/error_arity.cup:10:5: error: [0] Macro @myMacro failed: @myMacro expected 2 arguments, but found 1[0m
    @myMacro(1)
    [31m^[0m
